--- a/index.html
+++ b/index.html
@@ -133,15 +133,17 @@
                                 asperiores ex obcaecati reiciendis quidem ducimus et doloribus sed tempore, unde beatae
                                 aut consectetur eligendi ratione repellendus nulla pariatur. Explicabo enim officia iure
                                 blanditiis eos, velit.</p>
-                            <p class="about__text">
-                                Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae
-                                quas nobis reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe. Quos
-                                amet, aliquam, reiciendis porro eos voluptates maiores. Voluptas dolor quidem tempora
-                                illum laboriosam dolorum neque tenetur.</p>
-                            <p class="about__text">
+                            <p class="about__text hide-md">
+                                 Culpa consequatur labore, adipisci asperiores impedit tenetur quam
+                                    ab dicta recusandae quas nobis reprehenderit necessitatibus placeat corporis enim
+                                    aliquid sequi saepe. Quos amet, aliquam,<span class="hide-sm"> reiciendis <span class="hide-lg">
+                                    porro eos voluptates maiores. Voluptas dolor quidem temporaillum laboriosam dolorum
+                                    neque tenetur.</span></span>
+                            </p>
+                            <p class="about__text hide-lg hide-md hide-sm">
                                 Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat
                                 amet molestias provident unde, deleniti quo ducimus placeat voluptas! Quos amet,
-                                aliquam, reiciendis porro eos voluptates maiores.</p>
+                                aliquam, reiciendis porro eos</p>
                         </div>
                         <hr class="about__divider">
                     </div>
